--- a/frontend-cemos/src/app/modules/app2-estrategia/app2-estrategia-bibliografia/tratado-de-estrategia/tratado-de-estrategia.html
+++ b/frontend-cemos/src/app/modules/app2-estrategia/app2-estrategia-bibliografia/tratado-de-estrategia/tratado-de-estrategia.html
@@ -1,1 +1,9 @@
-<p>tratado-de-estrategia works!</p>
+<div>
+    <app-livro-individual
+      [contentPath]="contentPath"
+      [fileNames]="fileNames"
+      [backRoute]="backRoute"
+      [backLabel]="backLabel">
+    </app-livro-individual>
+  </div>
+    
