--- a/frontend-cemos/src/app/modules/app8-direito/app8-direito-bibliografia/pacto-sao-jose/pacto-sao-jose.html
+++ b/frontend-cemos/src/app/modules/app8-direito/app8-direito-bibliografia/pacto-sao-jose/pacto-sao-jose.html
@@ -1,1 +1,9 @@
-<p>pacto-sao-jose works!</p>
+<div>
+    <app-livro-individual
+      [contentPath]="contentPath"
+      [fileNames]="fileNames"
+      [backRoute]="backRoute"
+      [backLabel]="backLabel">
+    </app-livro-individual>
+  </div>
+    
